--- a/AnimeTrackerRe/AnimeTrackerRe/Views/UserControls/AnimeListTab.xaml
+++ b/AnimeTrackerRe/AnimeTrackerRe/Views/UserControls/AnimeListTab.xaml
@@ -94,7 +94,7 @@
         
         <!--</StackPanel>-->
 
-        <TextBlock Grid.Row="0" Grid.Column="4" Margin="80 0 10 0"  FontSize ="20" FontWeight="Bold" HorizontalAlignment="Left" VerticalAlignment="Center">TOTAL ANIME :</TextBlock>
+        <TextBlock Grid.Row="0" Grid.Column="4" Margin="120 0 10 0"  FontSize ="20" FontWeight="Bold" HorizontalAlignment="Left" VerticalAlignment="Center">TOTAL ANIME :</TextBlock>
         <Border Grid.Row="0" Grid.Column="4" CornerRadius="20" Background="White" Width="70" HorizontalAlignment="Right" BorderBrush="#000" Padding="2" BorderThickness="1" Height="50" Margin="0 0 15 0">
             <TextBox x:Name="TotalAnimeTxt"  Width="40" Margin="20 5 10 0" Height="45" HorizontalAlignment="Left"
                       KeyDown="AnimeTitleTxt_KeyDown"  VerticalAlignment="Center"
@@ -163,25 +163,77 @@
             </Button>
 
         </StackPanel>
-        
 
 
+
+        <!--AlternatingRowBackground="#d9f5ff"   AlternationCount="2"-->
 
 
         <DataGrid x:Name="JobGrid" AutoGenerateColumns="True" Grid.Column="1" 
-                  Grid.ColumnSpan="2" Grid.Row="1" Margin="0 0 0 0" Grid.RowSpan="4" 
+                  Grid.ColumnSpan="2" Grid.Row="1"  Grid.RowSpan="4" 
                   CanUserAddRows="False"  ItemsSource="{Binding jobsList}" 
-                  CanUserReorderColumns="False" CanUserResizeColumns="False" 
-                  AlternatingRowBackground="#d9f5ff" IsReadOnly="True" SelectionMode="Single" AutoGeneratingColumn="JobGrid_AutoGeneratingColumn" 
-                  SelectionChanged="JobGrid_SelectionChanged" x:FieldModifier="public">
+                  CanUserReorderColumns="False" CanUserResizeColumns="True" 
+                    IsReadOnly="True" SelectionMode="Single" AutoGeneratingColumn="JobGrid_AutoGeneratingColumn" 
+                  SelectionChanged="JobGrid_SelectionChanged" x:FieldModifier="public"  AlternationCount="2" FontFamily="Segoe UI"  FontSize="20"
+                   TextBlock.TextAlignment="Center" RowHeight="40"  ColumnWidth="auto">
+            <DataGrid.Resources>
+                <Style TargetType="TextBlock">
+                    <Setter Property="Margin" Value="10"></Setter>
+                </Style>
+            </DataGrid.Resources>
+            
             <DataGrid.ColumnHeaderStyle>
                 <Style TargetType="{x:Type DataGridColumnHeader}">
                     <Setter Property="FontWeight" Value="Bold" />
 
                     <Setter Property="FontSize" Value="14"/>
+                    <Setter Property="Label.HorizontalContentAlignment" Value="Center" />
+
                     <!--<Setter Property="Background" Value="#FF3A76B7"/>-->
                 </Style>
             </DataGrid.ColumnHeaderStyle>
+            <DataGrid.RowStyle>
+                <Style TargetType="DataGridRow">
+
+
+                    <Style.Triggers>
+                        <Trigger Property="AlternationIndex" Value="1">
+                            <Setter Property="Background" Value="#d9f5ff"/>
+                        </Trigger>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Background" Value="LightGray"></Setter>
+                            <Setter Property="Height" Value="55"></Setter>
+                           
+                           
+                        </Trigger>
+                        <Trigger Property="IsSelected" Value="True">
+                            <Setter Property="Background" Value="LightBlue"></Setter>
+                            <Setter Property="Foreground" Value="Black"></Setter>
+                                
+                        </Trigger>
+                    </Style.Triggers>
+                </Style>
+             
+            </DataGrid.RowStyle>
+            
+            <DataGrid.CellStyle>
+                <Style TargetType="DataGridCell">
+                
+
+                    <Style.Triggers>
+                        <Trigger Property="IsSelected" Value="True">
+                            <Setter Property="BorderThickness" Value="0"></Setter>
+                            <Setter Property="Background" Value="LightBlue"></Setter>
+                            <Setter Property="Foreground" Value="Black"></Setter>
+
+                        </Trigger>
+                     
+                    </Style.Triggers>
+                </Style>
+                
+            </DataGrid.CellStyle>
+            
+           
 
         </DataGrid>
 
@@ -199,6 +251,7 @@
                     <!--<Setter Property="Background" Value="#FF3A76B7"/>-->
                 </Style>
             </DataGrid.ColumnHeaderStyle>
+      
         </DataGrid>
 
         <StackPanel Grid.Column="1" Grid.Row="0" Grid.RowSpan="1" Grid.ColumnSpan="2" Orientation="Horizontal" VerticalAlignment="Center">
@@ -246,11 +299,11 @@
             </Button>
 
             <Button  x:Name="refreshButton" 
-                     Height="40"   Width="145" BorderBrush="#FF2196F3" Click="refreshButton_Click" Margin="20 0 0 0" >
+                     Height="40"   Width="145" BorderBrush="#FF2196F3" Click="DeleteButton_Click" Margin="20 0 0 0" >
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock>Refresh</TextBlock>
+                    <TextBlock>DELETE</TextBlock>
                     <TextBlock Text="  "></TextBlock>
-                    <materialDesign:PackIcon Kind="DatabaseRefresh" Foreground="White"  Width="20" Height="20"/>
+                    <materialDesign:PackIcon Kind="Delete" Foreground="White"  Width="20" Height="20"/>
 
                 </StackPanel>
                 <Button.BitmapEffect>
