Added the acryllic background. changed the starting screen settings to allow room for task bar at the bottom.

--- a/AnimeTrackerRe/AnimeTrackerRe/App.xaml
+++ b/AnimeTrackerRe/AnimeTrackerRe/App.xaml
@@ -7,6 +7,10 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
+                
+                <!--fluent wpf controls below-->
+                <ResourceDictionary Source="pack://application:,,,/FluentWPF;component/Styles/Controls.xaml"></ResourceDictionary>
+                <!--material design below-->
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Light.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Primary/MaterialDesignColor.DeepPurple.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Accent/MaterialDesignColor.Lime.xaml" />
@@ -53,8 +57,11 @@
             <!-- tell Dragablz tab control to use the Material Design theme -->
             <Style TargetType="{x:Type dragablz:TabablzControl}"  BasedOn="{StaticResource MaterialDesignTabablzControlStyle}"/>
 
-
+         
 
         </ResourceDictionary>
+     
+
     </Application.Resources>
+    
 </Application>
