--- a/AnimeTrackerRe/AnimeTrackerRe/MainWindow.xaml
+++ b/AnimeTrackerRe/AnimeTrackerRe/MainWindow.xaml
@@ -6,9 +6,56 @@
         xmlns:local="clr-namespace:AnimeTrackerRe"
         xmlns:dragablz="http://dragablz.net/winfx/xaml/dragablz"
         xmlns:local1="clr-namespace:AnimeTrackerRe.Views.UserControls"
+        xmlns:fw="clr-namespace:SourceChord.FluentWPF;assembly=FluentWPF"
+        fw:AcrylicWindow.Enabled="true"    
+        fw:AcrylicWindow.TintOpacity=".92"
+        fw:AcrylicWindow.TintColor="White"              
+        fw:AcrylicWindow.FallbackColor="White"
+
         mc:Ignorable="d"
-        Title="Anime Tracker" Height="800" Width="1500" WindowState="Maximized" Icon="transparent_reaper_profile_5_transparent___copy_sIP_icon.ico">
-    <Grid>
+        Title="Anime Tracker" Height="800" Width="1500" WindowState="Maximized" Icon="transparent_reaper_profile_5_transparent___copy_sIP_icon.ico" AllowsTransparency="True" WindowStyle="None">
+    <Grid fw:PointerTracker.Enabled="True" Background="#01ffffff">
+        <!--<Grid.ColumnDefinitions>
+            <ColumnDefinition Width="20"/>
+            --><!-- 0--><!--
+            <ColumnDefinition Width="*"/>
+            --><!-- 1--><!--
+            <ColumnDefinition Width="*"/>
+            --><!-- 2--><!--
+            <ColumnDefinition Width="*"/>
+            --><!-- 3--><!--
+            <ColumnDefinition Width="*"/>
+            --><!-- 4-->
+            <!--<ColumnDefinition Width="*"/>-->
+            <!-- 5--><!--
+            <ColumnDefinition Width="20"/>
+            --><!-- 6--><!--
+        </Grid.ColumnDefinitions>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="120"/>
+            --><!-- 0-->
+
+            <!-- 1--><!--
+            <RowDefinition Height="*"/>
+            --><!-- 2--><!--
+            <RowDefinition Height="*"/>
+            --><!-- 3--><!--
+            <RowDefinition Height="*"/>
+            --><!-- 4--><!--
+            <RowDefinition Height="*"/>
+            --><!-- 5--><!--
+            <RowDefinition Height="20"/>
+            --><!-- 6--><!--
+        </Grid.RowDefinitions>-->
+        <!--<Grid Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" Grid.RowSpan="1" Background="White">
+
+
+        </Grid>
+        <Grid Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="4" Grid.RowSpan="4" Background="#01ffffff">
+
+        </Grid>-->
+
 
         <Grid >
 
@@ -47,30 +94,9 @@
             </dragablz:TabablzControl>
 
 
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="10"/>
-
-                    <ColumnDefinition Width="*"/>
-
-                    <ColumnDefinition Width="12"/>
-
-                </Grid.ColumnDefinitions>
-
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="4"/>
-
-                    <RowDefinition Height="*"/>
-
-                    <RowDefinition Height="5"/>
-
-                </Grid.RowDefinitions>
-
-                <!--<Image Grid.Row="1" Grid.Column="1" Source="/Resources/westrocklogo.png" Width="200" Height="30"  
-                           HorizontalAlignment="Right" VerticalAlignment="Top" >
-
-                </Image>-->
-            </Grid>
+          
         </Grid>
+  
     </Grid>
+ 
 </Window>
