--- a/AnimeTrackerRe/AnimeTrackerRe/Views/UserControls/AnimeListTab.xaml
+++ b/AnimeTrackerRe/AnimeTrackerRe/Views/UserControls/AnimeListTab.xaml
@@ -5,15 +5,21 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:AnimeTrackerRe.Views.UserControls"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:fw="clr-namespace:SourceChord.FluentWPF;assembly=FluentWPF"
+             fw:AcrylicWindow.Enabled="true" 
+             fw:AcrylicWindow.TintOpacity=".92"
+             fw:AcrylicWindow.TintColor="White"
+             fw:AcrylicWindow.FallbackColor="White"
              mc:Ignorable="d" 
-             d:DesignHeight="800" d:DesignWidth="1500" Loaded="UserControl_Loaded">
+             d:DesignHeight="800" d:DesignWidth="1500" Loaded="UserControl_Loaded" >
 
     <UserControl.Resources></UserControl.Resources>
-    <Grid Background="White">
-        
-        
-            
-            <!--<Image   Grid.RowSpan="7" Grid.ColumnSpan="7" Source="/Resources/Dragon Ball - Legendary Dragon.jpg"   
+    <Grid  >
+    
+
+
+
+        <!--<Image   Grid.RowSpan="7" Grid.ColumnSpan="7" Source="/Resources/Dragon Ball - Legendary Dragon.jpg"   
                            HorizontalAlignment="Right" VerticalAlignment="Top" Width="auto" Height="auto">
 
             </Image>-->
@@ -52,6 +58,14 @@
             <RowDefinition Height="20"/>
             <!-- 6-->
         </Grid.RowDefinitions>
+        <!--<Border Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="6" Grid.RowSpan="1" Background="White">
+
+
+
+        </Border>-->
+        <Border Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="6" Grid.RowSpan="5" Background="#01ffffff" >
+
+        </Border>
 
 
         <!--<StackPanel Orientation="Horizontal" Grid.Column="2" Grid.Row="0" Grid.ColumnSpan="2" HorizontalAlignment="Right">-->
@@ -169,7 +183,7 @@
         <!--AlternatingRowBackground="#d9f5ff"   AlternationCount="2"-->
 
 
-        <DataGrid x:Name="JobGrid" AutoGenerateColumns="True" Grid.Column="1" 
+        <DataGrid x:Name="JobGrid" AutoGenerateColumns="True" Grid.Column="1" Margin="10"
                   Grid.ColumnSpan="2" Grid.Row="1"  Grid.RowSpan="4" 
                   CanUserAddRows="False"  ItemsSource="{Binding jobsList}" 
                   CanUserReorderColumns="False" CanUserResizeColumns="True" 
@@ -236,8 +250,12 @@
            
 
         </DataGrid>
+       
+        <!--<WebBrowser  x:Name="WebBrowserGrid"  Grid.Row="1" Grid.Column="3" Grid.ColumnSpan="2" Grid.RowSpan="4" Source="http://www.wikipedia/One-Piece" Margin="20">
+            
+        </WebBrowser>-->
 
-        <DataGrid x:Name="JobPlatesGrid" AutoGenerateColumns="True" Grid.Column="3" 
+        <!--<DataGrid x:Name="JobPlatesGrid" AutoGenerateColumns="True" Grid.Column="3" 
                   Grid.ColumnSpan="2" Grid.Row="1" Margin="20 0 0 0" Grid.RowSpan="4" 
                   CanUserAddRows="False"   
                   CanUserReorderColumns="False" CanUserResizeColumns="False" 
@@ -248,11 +266,11 @@
                     <Setter Property="FontWeight" Value="Bold" />
 
                     <Setter Property="FontSize" Value="14"/>
-                    <!--<Setter Property="Background" Value="#FF3A76B7"/>-->
+                    --><!--<Setter Property="Background" Value="#FF3A76B7"/>--><!--
                 </Style>
             </DataGrid.ColumnHeaderStyle>
       
-        </DataGrid>
+        </DataGrid>-->
 
         <StackPanel Grid.Column="1" Grid.Row="0" Grid.RowSpan="1" Grid.ColumnSpan="2" Orientation="Horizontal" VerticalAlignment="Center">
 
@@ -319,7 +337,11 @@
                 </Button.Background>
             </Button>
         </StackPanel>
+
+     
+
     </Grid>
+    
 </UserControl>
 
 
