--- a/AnimeTrackerRe/AnimeTrackerRe/MainWindow.xaml
+++ b/AnimeTrackerRe/AnimeTrackerRe/MainWindow.xaml
@@ -4,6 +4,10 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AnimeTrackerRe"
+        
+        xmlns:wf="clr-namespace:System.Windows.Forms;assembly=System.Windows.Forms"
+
+        
         xmlns:dragablz="http://dragablz.net/winfx/xaml/dragablz"
         xmlns:local1="clr-namespace:AnimeTrackerRe.Views.UserControls"
         xmlns:fw="clr-namespace:SourceChord.FluentWPF;assembly=FluentWPF"
@@ -13,7 +17,7 @@
         fw:AcrylicWindow.FallbackColor="White"
 
         mc:Ignorable="d"
-        Title="Anime Tracker" Height="800" Width="1500" WindowState="Maximized" Icon="transparent_reaper_profile_5_transparent___copy_sIP_icon.ico" AllowsTransparency="True" WindowStyle="None">
+        Title="Anime Tracker" Height="800" Width="1500" WindowState="Maximized" Icon="transparent_reaper_profile_5_transparent___copy_sIP_icon.ico" AllowsTransparency="False" WindowStyle="None">
     <Grid fw:PointerTracker.Enabled="True" Background="#01ffffff">
         <!--<Grid.ColumnDefinitions>
             <ColumnDefinition Width="20"/>
